data/derived/sp14/progs/unify/prog3267.ml.out
Characters 104-108:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type 'a -> 'a
       but an expression was expected of type 'a -> (('b -> 'a) -> 'c) -> 'c
       The type variable 'a occurs inside (('b -> 'a) -> 'c) -> 'c
